# AppACPDatasCompte

./: .gitignore  PRD_FinMap_v2.docx  README.md  index.html  package-lock.json  package.json
backend/: main.py  requirements.txt
backend/api/: routes_acp.py  routes_configuration.py  routes_export.py  routes_import.py
backend/modeles/: configuration_acp.py  donnees_financieres.py  resultats_acp.py
backend/services/: exporteur.py  lecteur_fichier.py  moteur_acp.py  transformateur.py  validateur.py
backend/tests/: test_pipeline_acp.py
donnees-test/: bilan_abrege_5x3.csv  bilan_abrege_5x3.xlsx  generer_donnees_test.py  template_bilan_abrege.csv
scripts/: dev.sh
src/: App.tsx  react-plotly.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/composants/communs/: NavigationEtapes.tsx
src/composants/visualisation/: Biplot.tsx  ScreePlot.tsx  SelecteurAxes.tsx  SliderTemporel.tsx
src/ecrans/: EcranConfiguration.tsx  EcranImport.tsx  EcranResultats.tsx  EcranVisualisation.tsx
src/services/: api.ts  backend.ts  types.ts
src/store/: configurationStore.ts  donneesStore.ts  index.ts  resultatsStore.ts
src/styles/: global.css
src/utils/: constantes.ts  couleurs.ts
