[package]
name = "finmap"
version = "0.1.0"
description = "FinMap — Cartographie Factorielle Financière"
authors = ["Robert — Logistikê sàrl"]
edition = "2021"

[lib]
name = "finmap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

